# ndk-study

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/include/libavcodec/: avcodec.h
app/libs/include/libavfilter/: avfilter.h
app/libs/include/libavformat/: avformat.h  avio.h
app/libs/include/libavutil/: avutil.h  channel_layout.h  frame.h  hwcontext.h  imgutils.h  mem.h  opt.h  pixdesc.h  pixfmt.h
app/src/androidTest/java/com/liuguoquan/study/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/liuguoquan/study/ndk/: MainActivity.kt
app/src/main/jni/: native-lib.cpp
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/liuguoquan/study/ndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
